how to add feeds done

--- a/clients/iOS/Grapevine/Grapevine/Base.lproj/Main.storyboard
+++ b/clients/iOS/Grapevine/Grapevine/Base.lproj/Main.storyboard
@@ -838,20 +838,13 @@
                                             <outlet property="feedNetwork" destination="y8N-V4-6ab" id="RWa-JF-nF8"/>
                                         </connections>
                                     </tableViewCell>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="howToAddCell" rowHeight="200" id="dk4-bU-8dQ" customClass="FeedTableViewCell" customModule="Grapevine" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="292" width="600" height="200"/>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="howToAddCell" rowHeight="250" id="dk4-bU-8dQ" customClass="FeedTableViewCell" customModule="Grapevine" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="292" width="600" height="250"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="dk4-bU-8dQ" id="yn2-l7-CAu">
-                                            <rect key="frame" x="0.0" y="0.0" width="600" height="199"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="600" height="249"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="swo-YW-h4i">
-                                                    <rect key="frame" x="8" y="8" width="584" height="82"/>
-                                                    <string key="text">You have no feeds! Add a feed by entering the end of the link to the Facebook page or Twitter account you want to follow. For example, in the links below, you would enter the highlighted text and then select either Facebook or Twitter</string>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                    <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
-                                                    <nil key="highlightedColor"/>
-                                                </label>
                                                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="fblink" translatesAutoresizingMaskIntoConstraints="NO" id="pCs-Fn-fOT">
                                                     <rect key="frame" x="52" y="98" width="497" height="41"/>
                                                     <constraints>
@@ -864,20 +857,37 @@
                                                         <constraint firstAttribute="height" constant="34" id="Frf-yZ-hEx"/>
                                                     </constraints>
                                                 </imageView>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="If the feed you add posts or tweets about an event, we will add it to your list and calendar!" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="KRk-z2-N0j">
+                                                    <rect key="frame" x="12" y="189" width="577" height="41"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="swo-YW-h4i">
+                                                    <rect key="frame" x="12" y="8" width="577" height="82"/>
+                                                    <string key="text">You have no feeds! Add a feed by entering the end of the link to the Facebook page or Twitter account you want to follow. For example, in the links below, you would enter the highlighted text and then select either Facebook or Twitter</string>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
                                             </subviews>
                                             <constraints>
                                                 <constraint firstItem="swo-YW-h4i" firstAttribute="top" secondItem="yn2-l7-CAu" secondAttribute="topMargin" id="AtX-f2-aRf"/>
                                                 <constraint firstItem="pCs-Fn-fOT" firstAttribute="centerX" secondItem="yn2-l7-CAu" secondAttribute="centerX" id="GEc-SD-LrK"/>
                                                 <constraint firstItem="pCs-Fn-fOT" firstAttribute="top" secondItem="swo-YW-h4i" secondAttribute="bottom" constant="8" id="IIn-y4-uzO"/>
                                                 <constraint firstItem="7xj-F0-VA5" firstAttribute="leading" secondItem="yn2-l7-CAu" secondAttribute="leadingMargin" constant="44" id="QTR-uN-SCY"/>
-                                                <constraint firstItem="swo-YW-h4i" firstAttribute="leading" secondItem="yn2-l7-CAu" secondAttribute="leadingMargin" id="SAT-wK-6up"/>
+                                                <constraint firstItem="KRk-z2-N0j" firstAttribute="top" secondItem="7xj-F0-VA5" secondAttribute="bottom" constant="8" id="Qzw-Ws-D8b"/>
+                                                <constraint firstItem="swo-YW-h4i" firstAttribute="leading" secondItem="yn2-l7-CAu" secondAttribute="leadingMargin" constant="4" id="SAT-wK-6up"/>
                                                 <constraint firstItem="pCs-Fn-fOT" firstAttribute="leading" secondItem="yn2-l7-CAu" secondAttribute="leadingMargin" constant="44" id="Vw9-bx-gLX"/>
                                                 <constraint firstItem="swo-YW-h4i" firstAttribute="centerX" secondItem="yn2-l7-CAu" secondAttribute="centerX" id="cbJ-mX-Qfc"/>
+                                                <constraint firstItem="KRk-z2-N0j" firstAttribute="leading" secondItem="yn2-l7-CAu" secondAttribute="leadingMargin" constant="4" id="eS3-c9-BYs"/>
                                                 <constraint firstItem="7xj-F0-VA5" firstAttribute="centerX" secondItem="yn2-l7-CAu" secondAttribute="centerX" id="hwK-yN-RD2"/>
                                                 <constraint firstAttribute="trailingMargin" secondItem="pCs-Fn-fOT" secondAttribute="trailing" constant="43" id="lA1-No-aYg"/>
                                                 <constraint firstItem="7xj-F0-VA5" firstAttribute="top" secondItem="pCs-Fn-fOT" secondAttribute="bottom" constant="8" id="muN-Xu-bmD"/>
                                                 <constraint firstAttribute="trailingMargin" secondItem="7xj-F0-VA5" secondAttribute="trailing" constant="43" id="wZJ-hd-Y2V"/>
-                                                <constraint firstItem="swo-YW-h4i" firstAttribute="trailing" secondItem="yn2-l7-CAu" secondAttribute="trailingMargin" id="yZM-Wd-hN7"/>
+                                                <constraint firstAttribute="trailingMargin" secondItem="KRk-z2-N0j" secondAttribute="trailing" constant="3" id="xOF-RO-RSc"/>
+                                                <constraint firstItem="swo-YW-h4i" firstAttribute="trailing" secondItem="yn2-l7-CAu" secondAttribute="trailingMargin" constant="-3" id="yZM-Wd-hN7"/>
+                                                <constraint firstItem="KRk-z2-N0j" firstAttribute="centerX" secondItem="yn2-l7-CAu" secondAttribute="centerX" id="zx1-cI-FUR"/>
                                             </constraints>
                                         </tableViewCellContentView>
                                     </tableViewCell>
