--- a/clients/iOS/Grapevine/Grapevine/Base.lproj/Main.storyboard
+++ b/clients/iOS/Grapevine/Grapevine/Base.lproj/Main.storyboard
@@ -448,7 +448,7 @@
                     <navigationItem key="navigationItem" title="Grapevine" id="8aY-or-hzN">
                         <barButtonItem key="rightBarButtonItem" image="glyphicons-137-cogwheel" id="4Mf-zs-z0v">
                             <connections>
-                                <segue destination="6dR-yE-XTp" kind="presentation" identifier="goToSettingsSegue" id="P13-di-8f7"/>
+                                <segue destination="6dR-yE-XTp" kind="presentation" identifier="goToSettings" id="P13-di-8f7"/>
                             </connections>
                         </barButtonItem>
                     </navigationItem>
@@ -934,24 +934,53 @@
                                     <action selector="logoutPressed:" destination="ZLW-Jy-7nr" eventType="touchUpInside" id="5WV-Ja-gHO"/>
                                 </connections>
                             </button>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Qfy-Ts-4gy">
+                                <rect key="frame" x="170" y="72" width="260" height="61"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Show Multi-Day Events:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="C9z-uR-lAJ">
+                                        <rect key="frame" x="0.0" y="20" width="182" height="21"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Gcp-7S-Vx1">
+                                        <rect key="frame" x="203" y="15" width="51" height="31"/>
+                                        <connections>
+                                            <action selector="multiDaySwitchToggled:" destination="ZLW-Jy-7nr" eventType="valueChanged" id="tT4-uI-tzo"/>
+                                        </connections>
+                                    </switch>
+                                </subviews>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstAttribute="trailing" secondItem="Gcp-7S-Vx1" secondAttribute="trailing" constant="8" id="CqJ-On-jaL"/>
+                                    <constraint firstItem="C9z-uR-lAJ" firstAttribute="leading" secondItem="Qfy-Ts-4gy" secondAttribute="leading" id="HGw-Y4-VpX"/>
+                                    <constraint firstItem="Gcp-7S-Vx1" firstAttribute="centerY" secondItem="Qfy-Ts-4gy" secondAttribute="centerY" id="N16-AF-biS"/>
+                                    <constraint firstAttribute="width" constant="260" id="SQc-nZ-88M"/>
+                                    <constraint firstAttribute="height" constant="61" id="cxd-TY-NVO"/>
+                                    <constraint firstItem="C9z-uR-lAJ" firstAttribute="centerY" secondItem="Qfy-Ts-4gy" secondAttribute="centerY" id="mCU-VU-4mb"/>
+                                </constraints>
+                            </view>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstItem="ef7-wI-dhh" firstAttribute="centerY" secondItem="pXV-CR-A6N" secondAttribute="centerY" id="Be5-Yi-MXu"/>
                             <constraint firstItem="ef7-wI-dhh" firstAttribute="leading" secondItem="pXV-CR-A6N" secondAttribute="leadingMargin" constant="88" id="G9X-g6-46d"/>
+                            <constraint firstItem="Qfy-Ts-4gy" firstAttribute="top" secondItem="p6T-Lv-abX" secondAttribute="bottom" constant="8" id="HGF-Uc-bvG"/>
                             <constraint firstAttribute="trailingMargin" secondItem="ef7-wI-dhh" secondAttribute="trailing" constant="88" id="anr-VU-tXZ"/>
                             <constraint firstItem="ef7-wI-dhh" firstAttribute="centerX" secondItem="pXV-CR-A6N" secondAttribute="centerX" id="j3G-4M-XNY"/>
+                            <constraint firstItem="Qfy-Ts-4gy" firstAttribute="centerX" secondItem="pXV-CR-A6N" secondAttribute="centerX" id="lar-Hf-urv"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" title="Settings" id="ZWj-5b-fSS">
                         <barButtonItem key="leftBarButtonItem" title="Back" id="aWu-WT-FIB">
                             <connections>
-                                <segue destination="VEd-9o-Gpj" kind="unwind" unwindAction="backToEventListViewController:" id="eFL-o8-Awe"/>
+                                <segue destination="VEd-9o-Gpj" kind="unwind" identifier="backFromSettings" unwindAction="backToEventListViewController:" id="eFL-o8-Awe"/>
                             </connections>
                         </barButtonItem>
                     </navigationItem>
                     <connections>
                         <outlet property="logoutButton" destination="ef7-wI-dhh" id="TS1-4a-U1t"/>
+                        <outlet property="showMultiDaySwitch" destination="Gcp-7S-Vx1" id="gTK-pc-2jz"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="qqj-bZ-Hva" userLabel="First Responder" sceneMemberID="firstResponder"/>
