--- a/clients/iOS/Grapevine/Grapevine/Base.lproj/Main.storyboard
+++ b/clients/iOS/Grapevine/Grapevine/Base.lproj/Main.storyboard
@@ -960,13 +960,41 @@
                                     <constraint firstItem="C9z-uR-lAJ" firstAttribute="centerY" secondItem="Qfy-Ts-4gy" secondAttribute="centerY" id="mCU-VU-4mb"/>
                                 </constraints>
                             </view>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="MFz-i4-kqG">
+                                <rect key="frame" x="170" y="141" width="260" height="60"/>
+                                <subviews>
+                                    <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="ohk-kX-Z46">
+                                        <rect key="frame" x="203" y="15" width="51" height="31"/>
+                                        <connections>
+                                            <action selector="allDaySwitchToggled:" destination="ZLW-Jy-7nr" eventType="valueChanged" id="cYj-Ir-F0R"/>
+                                        </connections>
+                                    </switch>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Show All-Day Events:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ESl-JV-tBB">
+                                        <rect key="frame" x="0.0" y="20" width="163" height="21"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstItem="ESl-JV-tBB" firstAttribute="centerY" secondItem="MFz-i4-kqG" secondAttribute="centerY" id="5uf-Ba-Ztw"/>
+                                    <constraint firstAttribute="width" constant="260" id="MsK-mm-tMm"/>
+                                    <constraint firstAttribute="height" constant="60" id="Mxo-JT-ODs"/>
+                                    <constraint firstAttribute="trailing" secondItem="ohk-kX-Z46" secondAttribute="trailing" constant="8" id="hFy-9e-zpD"/>
+                                    <constraint firstItem="ohk-kX-Z46" firstAttribute="centerY" secondItem="MFz-i4-kqG" secondAttribute="centerY" id="s1O-Tv-dg0"/>
+                                    <constraint firstItem="ESl-JV-tBB" firstAttribute="leading" secondItem="MFz-i4-kqG" secondAttribute="leading" id="szh-4O-RQ3"/>
+                                </constraints>
+                            </view>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstItem="ef7-wI-dhh" firstAttribute="centerY" secondItem="pXV-CR-A6N" secondAttribute="centerY" id="Be5-Yi-MXu"/>
                             <constraint firstItem="ef7-wI-dhh" firstAttribute="leading" secondItem="pXV-CR-A6N" secondAttribute="leadingMargin" constant="88" id="G9X-g6-46d"/>
                             <constraint firstItem="Qfy-Ts-4gy" firstAttribute="top" secondItem="p6T-Lv-abX" secondAttribute="bottom" constant="8" id="HGF-Uc-bvG"/>
+                            <constraint firstItem="MFz-i4-kqG" firstAttribute="centerX" secondItem="pXV-CR-A6N" secondAttribute="centerX" id="IWx-xF-RDd"/>
                             <constraint firstAttribute="trailingMargin" secondItem="ef7-wI-dhh" secondAttribute="trailing" constant="88" id="anr-VU-tXZ"/>
+                            <constraint firstItem="MFz-i4-kqG" firstAttribute="top" secondItem="Qfy-Ts-4gy" secondAttribute="bottom" constant="8" id="ija-Qg-QK3"/>
                             <constraint firstItem="ef7-wI-dhh" firstAttribute="centerX" secondItem="pXV-CR-A6N" secondAttribute="centerX" id="j3G-4M-XNY"/>
                             <constraint firstItem="Qfy-Ts-4gy" firstAttribute="centerX" secondItem="pXV-CR-A6N" secondAttribute="centerX" id="lar-Hf-urv"/>
                         </constraints>
@@ -980,6 +1008,7 @@
                     </navigationItem>
                     <connections>
                         <outlet property="logoutButton" destination="ef7-wI-dhh" id="TS1-4a-U1t"/>
+                        <outlet property="showAllDaySwitch" destination="ohk-kX-Z46" id="Wyv-QR-EV4"/>
                         <outlet property="showMultiDaySwitch" destination="Gcp-7S-Vx1" id="gTK-pc-2jz"/>
                     </connections>
                 </viewController>
