--- a/clients/Android/Grapevine/app/src/main/res/values/dimens.xml
+++ b/clients/Android/Grapevine/app/src/main/res/values/dimens.xml
@@ -45,4 +45,5 @@
     <dimen name="loading_message_size">16sp</dimen>
     <dimen name="med_grapes_height">50dp</dimen>
     <dimen name="med_grapes_width">25dp</dimen>
+    <dimen name="create_account_button_margin_top">20sp</dimen>
 </resources>
