--- a/clients/Android/Grapevine/app/src/main/res/layout/login.xml
+++ b/clients/Android/Grapevine/app/src/main/res/layout/login.xml
@@ -59,6 +59,7 @@
                     android:layout_marginTop="@dimen/login_button_margin_top"
                     android:text="@string/action_sign_in"
                     android:textStyle="bold"/>
+                
             </LinearLayout>
             <LinearLayout
                 android:layout_width="match_parent"
@@ -74,6 +75,23 @@
                     style="?android:attr/borderlessButtonStyle"
                     android:layout_weight=".6"
                     android:textColor="@color/create_account"/>
+            </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:weightSum="1"
+            android:gravity="center">
+            <Button
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:text="@string/forgot_password"
+                android:id="@+id/forgot_password"
+                android:layout_gravity="center_horizontal"
+                style="?android:attr/borderlessButtonStyle"
+                android:textColor="@color/create_account"
+                android:layout_weight=".6"
+                android:textAllCaps="false"
+                android:onClick="launchForgottenPasswordActivity" />
             </LinearLayout>
             <TextView
                 android:layout_width="wrap_content"
