Move event location out of event description and into to its own TextView.

--- a/clients/Android/Grapevine/app/src/main/res/layout/activity_view_event.xml
+++ b/clients/Android/Grapevine/app/src/main/res/layout/activity_view_event.xml
@@ -76,6 +76,13 @@
         android:textColor="@color/multi_day"
         android:visibility="invisible"
         android:layout_gravity="center"/>
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/event_location"
+        android:autoLink="map"
+        android:text="Event Location"
+        android:gravity="center" />
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -84,18 +91,19 @@
         android:layout_gravity="center"
         android:layout_marginBottom="@dimen/activity_vertical_margin">
     </LinearLayout>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/single_event_original_post"
+        android:text="@string/lorem_ipsum"
+        android:linksClickable="true"
+        android:autoLink="web" />
+
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight=".9">
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:id="@+id/single_event_original_post"
-            android:text="@string/lorem_ipsum"
-            android:linksClickable="true"
-            android:autoLink="web" />
-    </ScrollView>
+        android:layout_weight=".9"></ScrollView>
     <TextView android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/view_original_post"
